[package]
name = "httpress"
version = "0.5.1"
edition = "2024"
description = "A fast HTTP benchmarking tool built in Rust"
license = "MIT"
repository = "https://github.com/TecuceanuGabriel/httpress"
keywords = ["http", "benchmark", "load-testing", "performance"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
bytes = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyper-tls = "0.6"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }

[dev-dependencies]
axum = "0.8"

[profile.profiling]
inherits = "release"
debug = true
